@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST ETW-3.6-src.tar.gz 270316 RMD160 9b30bc5fef6cd8f976fa496a951e587223047291 SHA1 bd1446431814cd95476afa879faf0cffc42d739c SHA256 f36c14274c9c9da077cbf62f949e0f4eda60608a152dbdb440b9a1625b5ce35e
 DIST EatTheWhistle-linux-x86.tar.gz 8312306 RMD160 9d43ff68c9180a3703a8a90d29ee49db6eb9914e SHA1 891489b200dbabf238f32f8697e76b92623cd57f SHA256 43d2f8a9f29217a187e2802c3d28197f949e211aa9643dc38bd1b20c63e5b4fc
-EBUILD etw-3.6.ebuild 1148 RMD160 8322573d541fd3d0e3a125df7988f238873033b3 SHA1 76bb53c8505eff2115fcf5f1a68d448ca0fa0b5e SHA256 d662582d58f2368675f6d381e246b9f4134088ef1eb1f70f9cabf9acfe7b569f
-MISC ChangeLog 504 RMD160 39935c76ceb8bfc1d565d58084cb000cc985cf47 SHA1 d4eadc0b8e889bfaf14112785a7d69fa5f73153c SHA256 9f6bc826052fa6d4529e0edb9b6746e92cb7138fb741b774159b718ecdc80998
-MISC metadata.xml 247 RMD160 e6b25bfa3980cc1cc9e732b67f457fe2a2e9863c SHA1 4353118d4852f2d7ba4ccbbbb06bbf9fcfd25d24 SHA256 883dd20701cb074b79a6a73acfa6f7e6c5a0dcafba8f506da3ac324327300d68
+EBUILD etw-3.6.ebuild 1152 RMD160 20880fe62cc3f5d9e90c6212ffc0a72942c61e47 SHA1 6a1811fd065b23bf1dbf26f8e80eeb6aac9ea78c SHA256 297351aede59fd595ff96b70354f3d89edd1158094acebe93ebac5f7dd003ede
+MISC ChangeLog 608 RMD160 fe4fb0682fa35cb7755e458a9402d4daf01af43a SHA1 859664ade3c19056d1e1c80a861511a1e9fa7727 SHA256 d9231eb14caa39337768d1a0310b44411b3de478f060313ef501d7f7bacbda2f
+MISC metadata.xml 252 RMD160 98e581e345ae7649474731426f74795781bbd896 SHA1 da5d32bd96683be482b926f921805e8cc754f619 SHA256 261fa9fd2ee52f8b5898f381128b854fa20f980d551bc2b6fbabd501f3f01036
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk3EVc8ACgkQ9xNbxaeWTTwxrQCgk9KuICzanOF3FJBA8fd1AFuX
+2PQAn1lnGyWujt+UdDPlHJFxKaWPx0fQ
+=hVSV
+-----END PGP SIGNATURE-----
