@@ -3,7 +3,7 @@
 <pkgmetadata>
 	<herd></herd>
 	<maintainer>
-		<email>lazy_bum@o2.pl</email>
+		<email>szarpaj@grubelek.pl</email>
 		<name>Piotr Szymaniak</name>
 	</maintainer>
 </pkgmetadata>
