@@ -1,6 +1,10 @@
 # ChangeLog for games-sports/etw
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  06 May 2011; Piotr Szymaniak <szarpaj@grubelek.pl> etw-3.6.ebuild,
+  metadata.xml:
+  Fixed gtk+ dep.
 
   17 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> etw-3.6.ebuild:
   Fixed libsdl dep.
